--- a/package.json
+++ b/package.json
@@ -16,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/OscarKevinXR/cool-domains-contract/issues"
   },
-  "homepage": "https://github.com/OscarKevinXR/cool-domains-contract#readme"
+  "homepage": "https://github.com/OscarKevinXR/cool-domains-contract#readme",
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.4",
+    "hardhat": "^2.8.4"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0"
+  }
 }
